force-app/main/default/objects/PerformanceMeasureResult__c/PerformanceMeasureResult__c.object-meta.xml
<CustomObject>
    <label>Performance Measure Result</label>
    <nameField>
        <displayFormat>PMR-{0}</displayFormat>
        <label>Performance Measure Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Measure Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>