force-app/main/default/objects/PerformanceMeasureResult__c/fields/CpuTimeInMs__c.field-meta.xml
<CustomField>
    <fullName>CpuTimeInMs__c</fullName>
    <label>CPU Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>