force-app/main/default/objects/PerformanceMeasureResult__c/fields/ErrorDetail__c.field-meta.xml
<CustomField>
    <fullName>ErrorDetail__c</fullName>
    <description>If the execution failed, the JSON serialized exception detail</description>
    <inlineHelpText>If the execution failed, the JSON serialized exception detail</inlineHelpText>
    <label>Error Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>