force-app/main/default/objects/PerformanceMeasureResult__c/fields/ExperimentName__c.field-meta.xml
<CustomField>
    <fullName>ExperimentName__c</fullName>
    <label>Experiment Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>