force-app/main/default/objects/PerformanceMeasureResult__c/fields/HeapSizeInKB__c.field-meta.xml
<CustomField>
    <fullName>HeapSizeInKB__c</fullName>
    <label>Heap Size(KB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>