force-app/main/default/objects/PerformanceMeasureResult__c/fields/PerformanceMetrics__c.field-meta.xml
<CustomField>
    <fullName>PerformanceMetrics__c</fullName>
    <description>Stores Metrics information for a Suite execution, when a suite is started</description>
    <inlineHelpText>Stores Metrics information for a Suite execution, when a suite is started</inlineHelpText>
    <label>Performance Metrics</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>