force-app/main/default/objects/PerformanceMeasureResult__c/fields/RealTimeInMs__c.field-meta.xml
<CustomField>
    <fullName>RealTimeInMs__c</fullName>
    <label>Real Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>