force-app/main/default/objects/PerformanceMeasureResult__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>The result of the experiment as a ParentJobResult enum. Either SUCCESS or UNHANDLED_EXCEPTION.</description>
    <inlineHelpText>The result of the experiment as a ParentJobResult enum. Either SUCCESS or UNHANDLED_EXCEPTION.</inlineHelpText>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>