force-app/main/default/objects/PerformanceMeasureResult__c/fields/SuiteName__c.field-meta.xml
<CustomField>
    <fullName>SuiteName__c</fullName>
    <description>The name of the test suite that this result came from</description>
    <inlineHelpText>The name of the test suite that this result came from</inlineHelpText>
    <label>Suite Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>